[package]
name = "advent_of_code_2023"
version = "0.1.0"
authors = ["Jens Kalshoven"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.2"
float_next_after = "1.0.0"
itertools = "0.12.0"
log = "0.4.20"
nom = "7.1.3"
